test/Frontend/verify-directive.h
begin_unit|revision:0.9.5;language:C;cregit-version:0.0.1
begin_comment
comment|// Check that directives inside includes are included!
end_comment

begin_comment
comment|// expected-error@1 {{include file test}}
end_comment

end_unit

